Lab 1/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from ParCpp.y
-----------------------------------------------------------------------------

state 106 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pBody -> Body                               (1)
	%start_pDef -> Def                                 (2)
	%start_pListDef -> ListDef                         (3)
	%start_pArg -> Arg                                 (4)
	%start_pListArg -> ListArg                         (5)
	%start_pStm -> Stm                                 (6)
	%start_pListStm -> ListStm                         (7)
	%start_pExp16 -> Exp16                             (8)
	%start_pListString -> ListString                   (9)
	%start_pExp15 -> Exp15                             (10)
	%start_pExp14 -> Exp14                             (11)
	%start_pExp13 -> Exp13                             (12)
	%start_pExp12 -> Exp12                             (13)
	%start_pExp11 -> Exp11                             (14)
	%start_pExp10 -> Exp10                             (15)
	%start_pExp9 -> Exp9                               (16)
	%start_pExp8 -> Exp8                               (17)
	%start_pExp4 -> Exp4                               (18)
	%start_pExp3 -> Exp3                               (19)
	%start_pExp2 -> Exp2                               (20)
	%start_pExp -> Exp                                 (21)
	%start_pExp1 -> Exp1                               (22)
	%start_pExp5 -> Exp5                               (23)
	%start_pExp6 -> Exp6                               (24)
	%start_pExp7 -> Exp7                               (25)
	%start_pListExp -> ListExp                         (26)
	%start_pTempInst -> TempInst                       (27)
	%start_pType3 -> Type3                             (28)
	%start_pType2 -> Type2                             (29)
	%start_pType1 -> Type1                             (30)
	%start_pType -> Type                               (31)
	%start_pListType -> ListType                       (32)
	%start_pListId -> ListId                           (33)
	Double -> L_doubl                                  (34)
	Integer -> L_integ                                 (35)
	String -> L_quoted                                 (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	Body -> '{' ListStm '}'                            (39)
	Body -> ';'                                        (40)
	Def -> Type Id '(' ListArg ')' Body                (41)
	Def -> 'inline' Type Id '(' ListArg ')' Body       (42)
	ListDef ->                                         (43)
	ListDef -> Def ListDef                             (44)
	Arg -> Type                                        (45)
	Arg -> Type Id                                     (46)
	Arg -> Type Id '=' Exp                             (47)
	ListArg ->                                         (48)
	ListArg -> Arg                                     (49)
	ListArg -> Arg ',' ListArg                         (50)
	Stm -> ';'                                         (51)
	Stm -> Exp ';'                                     (52)
	Stm -> Type ListId ';'                             (53)
	Stm -> Type Id '=' Exp ';'                         (54)
	Stm -> 'return' Exp ';'                            (55)
	Stm -> 'return' ';'                                (56)
	Stm -> 'while' '(' Exp ')' Stm                     (57)
	Stm -> '{' ListStm '}'                             (58)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (59)
	ListStm ->                                         (60)
	ListStm -> Stm ListStm                             (61)
	Exp16 -> 'true'                                    (62)
	Exp16 -> 'false'                                   (63)
	Exp16 -> Integer                                   (64)
	Exp16 -> Double                                    (65)
	Exp16 -> ListString                                (66)
	Exp16 -> Id                                        (67)
	Exp16 -> '(' Exp ')'                               (68)
	ListString -> String                               (69)
	ListString -> String ListString                    (70)
	Exp15 -> Id '(' ListExp ')'                        (71)
	Exp15 -> Exp16                                     (72)
	Exp14 -> Exp14 '.' Exp15                           (73)
	Exp14 -> Exp14 '->' Exp15                          (74)
	Exp14 -> Exp15 '++'                                (75)
	Exp14 -> Exp15 '--'                                (76)
	Exp14 -> Exp15                                     (77)
	Exp13 -> '++' Exp14                                (78)
	Exp13 -> '--' Exp14                                (79)
	Exp13 -> Exp14                                     (80)
	Exp12 -> Exp12 '*' Exp13                           (81)
	Exp12 -> Exp12 '/' Exp13                           (82)
	Exp12 -> Exp13                                     (83)
	Exp11 -> Exp11 '+' Exp12                           (84)
	Exp11 -> Exp11 '-' Exp12                           (85)
	Exp11 -> Exp12                                     (86)
	Exp10 -> Exp10 '<<' Exp11                          (87)
	Exp10 -> Exp10 '>>' Exp11                          (88)
	Exp10 -> Exp11                                     (89)
	Exp9 -> Exp9 '<' Exp10                             (90)
	Exp9 -> Exp9 '>' Exp10                             (91)
	Exp9 -> Exp9 '<=' Exp10                            (92)
	Exp9 -> Exp9 '>=' Exp10                            (93)
	Exp9 -> Exp10                                      (94)
	Exp8 -> Exp8 '==' Exp9                             (95)
	Exp8 -> Exp8 '!=' Exp9                             (96)
	Exp8 -> Exp9                                       (97)
	Exp4 -> Exp4 '&&' Exp5                             (98)
	Exp4 -> Exp5                                       (99)
	Exp3 -> Exp3 '||' Exp4                             (100)
	Exp3 -> Exp4                                       (101)
	Exp2 -> Exp3 '=' Exp2                              (102)
	Exp2 -> Exp3                                       (103)
	Exp -> Exp1                                        (104)
	Exp1 -> Exp2                                       (105)
	Exp5 -> Exp6                                       (106)
	Exp6 -> Exp7                                       (107)
	Exp7 -> Exp8                                       (108)
	ListExp ->                                         (109)
	ListExp -> Exp                                     (110)
	ListExp -> Exp ',' ListExp                         (111)
	TempInst -> Id '<' ListType '>'                    (112)
	Type3 -> 'bool'                                    (113)
	Type3 -> 'int'                                     (114)
	Type3 -> 'double'                                  (115)
	Type3 -> 'void'                                    (116)
	Type3 -> 'string'                                  (117)
	Type2 -> Type3                                     (118)
	Type2 -> TempInst                                  (119)
	Type1 -> Type2                                     (120)
	Type1 -> Type2 '&'                                 (121)
	Type -> Type1                                      (122)
	Type -> 'const' Type1                              (123)
	ListType -> Type                                   (124)
	ListType -> Type ',' ListType                      (125)
	ListId -> Id                                       (126)
	ListId -> Id ',' ListId                            (127)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'--'           { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<<'           { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'>>'           { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'const'        { PT _ (TS _ 25) }
	'double'       { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'inline'       { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'string'       { PT _ (TS _ 33) }
	'true'         { PT _ (TS _ 34) }
	'void'         { PT _ (TS _ 35) }
	'while'        { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'||'           { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pBody    rule  1
	%start_pDef     rule  2
	%start_pListDef rule  3
	%start_pArg     rule  4
	%start_pListArg rule  5
	%start_pStm     rule  6
	%start_pListStm rule  7
	%start_pExp16   rule  8
	%start_pListString rule  9
	%start_pExp15   rule  10
	%start_pExp14   rule  11
	%start_pExp13   rule  12
	%start_pExp12   rule  13
	%start_pExp11   rule  14
	%start_pExp10   rule  15
	%start_pExp9    rule  16
	%start_pExp8    rule  17
	%start_pExp4    rule  18
	%start_pExp3    rule  19
	%start_pExp2    rule  20
	%start_pExp     rule  21
	%start_pExp1    rule  22
	%start_pExp5    rule  23
	%start_pExp6    rule  24
	%start_pExp7    rule  25
	%start_pListExp rule  26
	%start_pTempInst rule  27
	%start_pType3   rule  28
	%start_pType2   rule  29
	%start_pType1   rule  30
	%start_pType    rule  31
	%start_pListType rule  32
	%start_pListId  rule  33
	Double          rule  34
	Integer         rule  35
	String          rule  36
	Id              rule  37
	Program         rule  38
	Body            rules 39, 40
	Def             rules 41, 42
	ListDef         rules 43, 44
	Arg             rules 45, 46, 47
	ListArg         rules 48, 49, 50
	Stm             rules 51, 52, 53, 54, 55, 56, 57, 58, 59
	ListStm         rules 60, 61
	Exp16           rules 62, 63, 64, 65, 66, 67, 68
	ListString      rules 69, 70
	Exp15           rules 71, 72
	Exp14           rules 73, 74, 75, 76, 77
	Exp13           rules 78, 79, 80
	Exp12           rules 81, 82, 83
	Exp11           rules 84, 85, 86
	Exp10           rules 87, 88, 89
	Exp9            rules 90, 91, 92, 93, 94
	Exp8            rules 95, 96, 97
	Exp4            rules 98, 99
	Exp3            rules 100, 101
	Exp2            rules 102, 103
	Exp             rule  104
	Exp1            rule  105
	Exp5            rule  106
	Exp6            rule  107
	Exp7            rule  108
	ListExp         rules 109, 110, 111
	TempInst        rule  112
	Type3           rules 113, 114, 115, 116, 117
	Type2           rules 118, 119
	Type1           rules 120, 121
	Type            rules 122, 123
	ListType        rules 124, 125
	ListId          rules 126, 127

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'inline'       shift, and enter state 124
	'int'          shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 38
	%eof           reduce using rule 43

	Id             goto state 39
	Program        goto state 129
	Def            goto state 121
	ListDef        goto state 130
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 123

State 1

	%start_pBody -> . Body                              (rule 1)

	';'            shift, and enter state 127
	'{'            shift, and enter state 128

	Body           goto state 126

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'inline'       shift, and enter state 124
	'int'          shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 38

	Id             goto state 39
	Def            goto state 125
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 123

State 3

	%start_pListDef -> . ListDef                        (rule 3)

	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'inline'       shift, and enter state 124
	'int'          shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 38
	%eof           reduce using rule 43

	Id             goto state 39
	Def            goto state 121
	ListDef        goto state 122
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 123

State 4

	%start_pArg -> . Arg                                (rule 4)

	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 38

	Id             goto state 39
	Arg            goto state 120
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 119

State 5

	%start_pListArg -> . ListArg                        (rule 5)

	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 38
	%eof           reduce using rule 48

	Id             goto state 39
	Arg            goto state 117
	ListArg        goto state 118
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 119

State 6

	%start_pStm -> . Stm                                (rule 6)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	';'            shift, and enter state 111
	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'false'        shift, and enter state 83
	'if'           shift, and enter state 112
	'int'          shift, and enter state 49
	'return'       shift, and enter state 113
	'string'       shift, and enter state 50
	'true'         shift, and enter state 84
	'void'         shift, and enter state 51
	'while'        shift, and enter state 114
	'{'            shift, and enter state 115
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 106
	Stm            goto state 116
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp9           goto state 69
	Exp8           goto state 70
	Exp4           goto state 71
	Exp3           goto state 72
	Exp2           goto state 73
	Exp            goto state 109
	Exp1           goto state 75
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 110

State 7

	%start_pListStm -> . ListStm                        (rule 7)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	';'            shift, and enter state 111
	'bool'         shift, and enter state 46
	'const'        shift, and enter state 47
	'double'       shift, and enter state 48
	'false'        shift, and enter state 83
	'if'           shift, and enter state 112
	'int'          shift, and enter state 49
	'return'       shift, and enter state 113
	'string'       shift, and enter state 50
	'true'         shift, and enter state 84
	'void'         shift, and enter state 51
	'while'        shift, and enter state 114
	'{'            shift, and enter state 115
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38
	%eof           reduce using rule 60

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 106
	Stm            goto state 107
	ListStm        goto state 108
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp9           goto state 69
	Exp8           goto state 70
	Exp4           goto state 71
	Exp3           goto state 72
	Exp2           goto state 73
	Exp            goto state 109
	Exp1           goto state 75
	Exp5           goto state 76
	Exp6           goto state 77
	Exp7           goto state 78
	TempInst       goto state 40
	Type3          goto state 41
	Type2          goto state 42
	Type1          goto state 43
	Type           goto state 110

State 8

	%start_pExp16 -> . Exp16                            (rule 8)

	'('            shift, and enter state 80
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 104
	Exp16          goto state 105
	ListString     goto state 62

State 9

	%start_pListString -> . ListString                  (rule 9)

	L_quoted       shift, and enter state 86

	String         goto state 59
	ListString     goto state 103

State 10

	%start_pExp15 -> . Exp15                            (rule 10)

	'('            shift, and enter state 80
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 102

State 11

	%start_pExp14 -> . Exp14                            (rule 11)

	'('            shift, and enter state 80
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 101

State 12

	%start_pExp13 -> . Exp13                            (rule 12)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 100

State 13

	%start_pExp12 -> . Exp12                            (rule 13)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 99

State 14

	%start_pExp11 -> . Exp11                            (rule 14)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 98

State 15

	%start_pExp10 -> . Exp10                            (rule 15)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 97

State 16

	%start_pExp9 -> . Exp9                              (rule 16)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp9           goto state 96

State 17

	%start_pExp8 -> . Exp8                              (rule 17)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38

	Double         goto state 57
	Integer        goto state 58
	String         goto state 59
	Id             goto state 60
	Exp16          goto state 61
	ListString     goto state 62
	Exp15          goto state 63
	Exp14          goto state 64
	Exp13          goto state 65
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp9           goto state 69
	Exp8           goto state 95

State 18

	%start_pExp4 -> . Exp4                              (rule 18)

	'('            shift, and enter state 80
	'++'           shift, and enter state 81
	'--'           shift, and enter state 82
	'false'        shift, and enter state 83
	'true'         shift, and enter state 84
	L_doubl        shift, and enter state 35
	L_integ        shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 38
